# pdf2md

./: README.md  clean  pdf2md  pyproject.toml  requirements.txt
src/pdf2md/: cli.py  engine.py
