[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "PDF → Markdown using DotsOCR (HF) with resume and caching"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pablo Llopis" }]
dependencies = [
  "accelerate==1.10.0",
  "huggingface-hub==0.34.4",
  "qwen-vl-utils==0.0.11",
  "torch==2.7.0+cu128",
  "torchaudio==2.7.0+cu128",
  "torchvision==0.22.0+cu128",
  "transformers==4.51.3",
  "Pillow>=10.0",
  "PyMuPDF>=1.24",
]

[project.optional-dependencies]
cuda = [
  "flash-attn>=2.8.0.post2; platform_system == 'Linux'",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"
